--- a/res/layout/activity_second.xml
+++ b/res/layout/activity_second.xml
@@ -117,8 +117,7 @@
         android:paddingLeft="20dp"
         android:paddingTop="8dp"
    	    android:paddingBottom="5dp"
-        android:textSize="18sp"
-        android:text="song selection" />
+        android:textSize="18sp" />
     
     <TextView
         android:id="@+id/title_must"
@@ -207,8 +206,7 @@
         android:paddingLeft="20dp"
         android:paddingTop="8dp"
    	    android:paddingBottom="5dp"
-        android:textSize="18sp"
-        android:text="song selection" />
+        android:textSize="18sp" />
     
     <TextView
         android:id="@+id/title_early"
