--- a/res/layout/activity_must_song.xml
+++ b/res/layout/activity_must_song.xml
@@ -20,12 +20,24 @@
         android:paddingLeft="20dp"
         android:textColor="#FFFFFF"
         android:textSize="45sp" />
+    
+     <TextView
+        android:id="@+id/local_song_must"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/mustsongTitleBar"
+        android:background="#CADCE6"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="10dp"
+        android:textSize="18sp"
+        android:text="Selecte song from your local collection" />
 
     <ListView
         android:id="@+id/listView_must"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-         android:layout_below="@id/mustsongTitleBar"
+         android:layout_below="@id/local_song_must"
         android:layout_centerHorizontal="true" >
 
     </ListView>
