--- a/res/layout/activity_first.xml
+++ b/res/layout/activity_first.xml
@@ -7,15 +7,98 @@
     tools:context="com.example.sleepmonitor.FirstActivity"
     tools:ignore="MergeRootFrame" >
     
+    <View
+        android:id="@+id/anchor"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true" />
+    
+    <View
+        android:id="@+id/middle"
+        android:layout_width="500dp"
+        android:layout_height="1dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+   	    android:layout_marginBottom="30dp"
+        android:layout_alignTop="@+id/textView_interval"
+        android:layout_alignBottom="@+id/textView_interval" />
+    
+      <ImageView
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/textView_interval"
+        android:layout_marginBottom="-45dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/foggy_glass" />
+    
+    <TextView
+   	    android:id="@+id/titleBar"
+   	    android:layout_width="match_parent"
+   	    android:layout_height="60dp"
+   	    android:background="#2EB8E6"
+   	    android:layout_alignParentTop="true"
+   	    android:textColor="#FFFFFF"
+   	    android:textSize="32sp"
+   	    android:textStyle="bold|italic"
+   	    android:paddingTop="10dp"
+   	    android:paddingBottom="10dp"
+   	    android:paddingLeft="20dp"
+   	    android:text="Alarmalarm" />
+   
+    <Switch
+        android:id="@+id/switch1"
+        android:thumb="@drawable/switch1_thumb"
+        android:track="@drawable/switch1_bg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:switchMinWidth="230dp"
+        android:layout_below="@id/anchor"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:textOff="         "
+        android:textOn="         " />
+    
+     <ImageView
+        android:id="@+id/interval_frame_unselected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView_interval"
+        android:layout_alignBottom="@+id/textView_interval"
+        android:paddingTop="10dp"
+   	    android:paddingBottom="10dp"
+        android:src="@drawable/interval_frame_unselected" />
+    
+    <ImageView
+        android:id="@+id/interval_frame_selected"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView_interval"
+        android:layout_alignBottom="@+id/textView_interval"
+        android:src="@drawable/interval_frame_selected" />
+    
+    <TextView
+        android:id="@+id/textView_interval"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/anchor"
+        android:gravity="center"
+        android:textSize="22sp"
+        android:textColor="#2EB8E6" />
+    
+     <!--     android:background="#CADCE6" -->
+     
     <TextView
         android:id="@+id/textView_earliest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true" 
+        android:layout_above="@id/textView_interval"
+        android:layout_marginBottom="30dp"
         android:layout_marginRight="5dp"
-        android:textColor="#A0A0A0"
+        android:textColor="#FFFFFF"
         android:includeFontPadding="false" 
         android:textStyle="bold"
         android:textSize="72sp" />
@@ -32,28 +115,15 @@
         android:paddingLeft="5dp"
         android:paddingBottom="15dp"
         android:src="@drawable/earliest_wakeup" />
-    
-    <TextView
-        android:id="@+id/textView_interval"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="#CADCE6"
-        android:layout_marginTop="200dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:textSize="22sp"
-        android:textColor="#2EB8E6"
-        android:text="nap_interval" />
      
     <TextView
         android:id="@+id/textView_must"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true" 
-        android:layout_marginBottom="90dp"
         android:layout_marginRight="5dp"
+        android:layout_below="@id/switch1"
+        android:layout_marginTop="30dp"
         android:textColor="#A0A0A0"
         android:includeFontPadding="false" 
         android:textStyle="bold"
@@ -71,39 +141,6 @@
         android:paddingLeft="5dp"
         android:paddingBottom="15dp"
         android:src="@drawable/must_wakeup" />
-    
-   	<TextView
-   	    android:id="@+id/titleBar"
-   	    android:layout_width="match_parent"
-   	    android:layout_height="60dp"
-   	    android:background="#2EB8E6"
-   	    android:layout_alignParentTop="true"
-   	    android:textColor="#FFFFFF"
-   	    android:textSize="32sp"
-   	    android:textStyle="bold|italic"
-   	    android:paddingTop="10dp"
-   	    android:paddingBottom="10dp"
-   	    android:paddingLeft="20dp"
-   	    android:text="Alarmalarm" />
-   	
-   	<View
-        android:id="@+id/anchor"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerInParent="true" />
-    
-    <Switch
-        android:id="@+id/switch1"
-        android:thumb="@drawable/switch1_thumb"
-        android:track="@drawable/switch1_bg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:switchMinWidth="230dp"
-        android:layout_below="@id/anchor"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:textOff="        "
-        android:textOn="       " />
     
     <TextView
    	    android:id="@+id/underline"
