--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@android:id/tabhost"
+        android:background="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
