--- a/res/layout/activity_early_song_radio.xml
+++ b/res/layout/activity_early_song_radio.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal" >
         <RadioButton
             android:id="@+id/radioButton_early"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:checked="false"
