--- a/res/layout/activity_must_song_radio.xml
+++ b/res/layout/activity_must_song_radio.xml
@@ -6,7 +6,7 @@
     
     <RadioButton
             android:id="@+id/radioButton_must"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:checked="false"
